# appstore-publisher

./: .gitignore  README.md  TASK.md  config.example.toml  pyproject.toml
src/appstore_publisher/: __init__.py  channel_detector.py  cli.py  config.py  models.py  publisher.py  utils.py  web_main.py
src/appstore_publisher/stores/: __init__.py  base.py  honor.py  huawei.py  oppo.py  vivo.py  xiaomi.py  yingyongbao.py
src/appstore_publisher/web/: __init__.py  server.py
src/appstore_publisher/web/static/: index.html
