[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appstore-publisher"
version = "0.1.0"
description = "Cross-platform CLI tool to auto-publish APKs to Chinese Android app stores"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
    "cryptography>=41.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
appstore-publisher = "appstore_publisher.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
